# MyFFmpegPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/myffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/wangxingxing/myffmpegplayer/: App.java  DoKitActivity.java  Flags.java  MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_do_kit.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangxingxing/myffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
